# candle-gnn

./: .gitignore  Cargo.toml  README.md
examples/: cora.rs  dblp.rs  sandbox.rs  small.rs
src/: datasets.rs  lib.rs  models.rs  utils.rs
src/datasets/: citeseer.rs  cora.rs  datasets.rs  dblp.rs  full_batch_loader.rs  mod.rs  movielens.rs  pubmed_diabetes.rs  traits.rs  utils.rs
src/models/: gat.rs  gcn.rs  gin.rs  hetero_gcn.rs  traits.rs  utils.rs
src/nn/: gat.rs  gcn.rs  gin.rs  hetero_gcn.rs  utils.rs
