[package]
name = "candle-gnn"
edition = "2021"
version = "0.1.0"
description = "Graph Neural Network Library"                                                                            
repository = "https://github.com/spaghetti-source/candle-gnn"
keywords = ["graph", "machine-learning"]
categories = ["science"]
license = "MIT"
authors = ["Takanori Maehara"]

[profile.dev]
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
anyhow = "1.0.75"
indicatif = "0.17.7"
itertools = "0.12.0"
polars = { version = "0.35.4", features = ["parquet", "polars-io", "random", "lazy", "range"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
# serde = "1.0.193"
# serde_json = "1.0.108"
tempfile = "3.8.1"
zip = "0.6.6"
tar = "0.4.40"
flate2 = "1.0.28"
regex = "1.10.2"
